TF_logs/contrib_graph_editor_util/log19.log
Traceback (most recent call last):
  File "train.py", line 10, in <module>
    from tensorflow.contrib import learn
  File "<frozen importlib._bootstrap>", line 1007, in _handle_fromlist
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow/__init__.py", line 50, in __getattr__
    module = self._load()
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow/__init__.py", line 44, in _load
    module = _importlib.import_module(self.__name__)
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/__init__.py", line 52, in <module>
    from tensorflow.contrib import graph_editor
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/__init__.py", line 22, in <module>
    from tensorflow.contrib.graph_editor.edit import *
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/__init__.py", line 22, in <module>
    from tensorflow.contrib.graph_editor.edit import *
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/edit.py", line 21, in <module>
    from tensorflow.contrib.graph_editor import reroute
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/reroute.py", line 21, in <module>
    from tensorflow.contrib.graph_editor import subgraph as _subgraph
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/subgraph.py", line 28, in <module>
    from tensorflow.contrib.graph_editor import select
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/select.py", line 26, in <module>
    from tensorflow.contrib.graph_editor import util
  File "/Volumes/Transcend/opt/anaconda3/envs/keras/lib/python3.6/site-packages/tensorflow_core/contrib/graph_editor/util.py", line 214
    t) for t not in check_types]), type(op)))
               ^
SyntaxError: invalid syntax
